# cmake-clion-conan-example

./: CMakeLists.txt
cmake/: conan.cmake
src/: main.cpp
